apps/langflow/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: &namespace langflow
  labels:
    kubernetes.io/metadata.name: *namespace
